# salom-infin-backend

./: .coveragerc  .gitignore  CHANGELOG.md  Makefile  README.md  db_latest.sql  deploy.sh  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: relaese.yml  server-ci.yml
apps/: conftest.py
apps/company/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  translation.py  urls.py  views.py
apps/compose/: admin.py  apps.py  (+6 more)
base_model/: models.py  permissions.py  serializers.py  urls.py  views.py
config/: __init__.py  api_secret.py  asgi.py  celery.py  consumers.py  private_urls.py  public_urls.py  redis_client.py  routing.py  schema_generators.py  settings.py  storage.py  urls.py
json_files/: action_text.json  cache_keys.json  compose_statuses.json  departments.json  doc_sub_types.json  doc_types.json  envs.json  error_messages.json  expense_types.json  field_mapping.json  journals.json  news_categories.json  news_tags.json  statuses.json
scripts/: add_countries.py  convert_mb_to_bytes.py  fix_file_sizes.py  get_ldap_groups.py  get_ldap_users.py  import_branches.py  import_emp_states.py  import_ldap_logins.py  import_payroll.py  import_positions.py  import_sub_dept.py  import_sub_sub_dept.py  import_top_level_depts.py  import_user_equipments.py  import_user_hr_emp_works.py  populate_fake_data.py  update_emp_condition.py  update_emps.py  update_resigned_users.py
utils/: base_exception.py  constant_ids.py  constants.py  db_connection.py  decorators.py  exception.py  global_socket.py  pagination.py  serializer.py  tools.py  utils.py
(+622 files in other folders)
