[project]
version = "1.38.1"

[tool.semantic_release]
hvcs = "github"
version_toml = ["pyproject.toml:project.version"]
upload_to_repository = false
upload_to_release = true
build_command = "echo 'No build needed for Django project'"
commit_message = "chore(release): v{version} [skip ci]"

[tool.semantic_release.branches.main]
match = "(main|master|refactor/.*)"
prerelease = false

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
